--- a/index.html
+++ b/index.html
@@ -1,80 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>HelpKart – Crowdfunding Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body{
-      margin:0;
-      font-family: Arial, Helvetica, sans-serif;
-      background:#f5f5f5;
-    }
-    header{
-      background:#2d89ef;
-      color:white;
-      padding:20px;
-      text-align:center;
-    }
-    section{
-      padding:30px;
-      max-width:1000px;
-      margin:auto;
-    }
-    .card{
-      background:white;
-      padding:20px;
-      border-radius:8px;
-      box-shadow:0 2px 8px rgba(0,0,0,0.1);
-      margin-bottom:20px;
-    }
-    .btn{
-      display:inline-block;
-      padding:12px 20px;
-      background:#2d89ef;
-      color:white;
-      text-decoration:none;
-      border-radius:5px;
-      margin-top:10px;
-    }
-    footer{
-      background:#222;
-      color:#ccc;
-      text-align:center;
-      padding:15px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>HelpKart – Crowdfunding in India</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#f5f7fb;
+}
+
+/* HEADER */
+header{
+  background:#0a3cff;
+  color:#fff;
+  padding:15px 30px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+.logo{
+  font-size:24px;
+  font-weight:bold;
+}
+nav a{
+  color:#fff;
+  margin-right:15px;
+  text-decoration:none;
+}
+.btn{
+  background:#ffb703;
+  border:none;
+  padding:10px 18px;
+  font-weight:bold;
+  border-radius:6px;
+  cursor:pointer;
+}
+
+/* HERO */
+.hero{
+  background:#ffffff;
+  text-align:center;
+  padding:70px 20px;
+}
+.hero h1{
+  font-size:32px;
+  margin-bottom:10px;
+}
+.hero p{
+  color:#555;
+}
+
+/* MODAL */
+.modal{
+  display:none;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.6);
+}
+.form-box{
+  background:#fff;
+  width:360px;
+  margin:60px auto;
+  padding:25px;
+  border-radius:10px;
+  position:relative;
+}
+.form-box h2{
+  margin-top:0;
+  text-align:center;
+}
+label{
+  font-size:14px;
+  margin-top:10px;
+  display:block;
+}
+input, select{
+  width:100%;
+  padding:9px;
+  margin-top:5px;
+}
+.full{
+  width:100%;
+  margin-top:15px;
+}
+.small{
+  font-size:13px;
+  text-align:center;
+  margin-top:10px;
+}
+.close{
+  position:absolute;
+  right:12px;
+  top:8px;
+  font-size:22px;
+  cursor:pointer;
+}
+.ngo{
+  text-align:center;
+  margin-top:10px;
+  font-size:13px;
+}
+</style>
 </head>
+
 <body>
 
 <header>
-  <h1>HelpKart</h1>
-  <p>Crowdfunding for Medical & Social Causes</p>
+  <div class="logo">HelpKart</div>
+  <nav>
+    <a href="#">Browse Fundraisers</a>
+    <a href="#">How It Works</a>
+    <a href="#">Sign In</a>
+    <button class="btn" onclick="openForm()">START A FUNDRAISER</button>
+  </nav>
 </header>
 
-<section>
-  <div class="card">
-    <h2>Need Funds for a Medical Emergency?</h2>
-    <p>
-      HelpKart is a trusted crowdfunding platform where you can raise funds
-      for medical treatments, education, and social causes.
-    </p>
-    <a class="btn" href="#">Start a Free Fundraiser</a>
-  </div>
-
-  <div class="card">
-    <h2>Why Choose HelpKart?</h2>
-    <ul>
-      <li>0% Platform Fee</li>
-      <li>Trusted by thousands of donors</li>
-      <li>Fast & Secure Payments</li>
-    </ul>
-  </div>
+<section class="hero">
+  <h1>Need Funds to Pay For a Medical Emergency or Social Cause?</h1>
+  <p>0% Platform Fee • Trusted by Lakhs of Contributors</p>
+  <br>
+  <button class="btn" onclick="openForm()">Start Fundraiser</button>
 </section>
 
-<footer>
-  <p>© 2025 HelpKart | Made with ❤️</p>
-</footer>
+<!-- FUNDRAISER FORM -->
+<div class="modal" id="fundForm">
+  <div class="form-box">
+    <span class="close" onclick="closeForm()">×</span>
+    <h2>Start a Fundraiser</h2>
+
+    <label>Language</label>
+    <select>
+      <option>English</option>
+      <option>Hindi</option>
+      <option>Bangla</option>
+      <option>Tamil</option>
+      <option>Assamese</option>
+    </select>
+
+    <label>Purpose of raising funds</label>
+    <select>
+      <option>Medical Treatment</option>
+      <option>Education</option>
+      <option>Children</option>
+      <option>Animal</option>
+      <option>Other</option>
+    </select>
+
+    <label>Name *</label>
+    <input type="text" placeholder="Name as per Aadhar">
+
+    <label>Email Address *</label>
+    <input type="email" placeholder="example@email.com">
+
+    <label>Create a Password *</label>
+    <input type="password">
+
+    <label>Mobile *</label>
+    <input type="tel" placeholder="+91">
+
+    <button class="btn full">Next</button>
+
+    <div class="small">
+      Already have an account? <a href="#">Login</a>
+    </div>
+
+    <div class="ngo">
+      Are you an NGO? <a href="#">Apply here</a>
+    </div>
+  </div>
+</div>
+
+<script>
+function openForm(){
+  document.getElementById("fundForm").style.display="block";
+}
+function closeForm(){
+  document.getElementById("fundForm").style.display="none";
+}
+</script>
 
 </body>
 </html>
